bk_ida/gobmkida/c3/incremental_order_moves
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/incremental_order_moves/src/engine/board.c:4165:7: error: use of undeclared identifier 'byte_9C689F'
v14 = byte_9C689F[v12]; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/incremental_order_moves/src/engine/board.c:4178:7: error: use of undeclared identifier 'byte_9C689F'
v14 = byte_9C689F[v12]; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/incremental_order_moves/src/engine/board.c:4224:7: error: use of undeclared identifier 'byte_9C688C'
v15 = byte_9C688C[v12]; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/incremental_order_moves/src/engine/board.c:4237:7: error: use of undeclared identifier 'byte_9C688C'
v15 = byte_9C688C[v12]; 
      ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/incremental_order_moves/src/obj/1/board.o] Error 1
